# http_server_rust

./: Cargo.toml
src/: main.rs
templates/: error.html  listing.html
