[package]
name = "http_server_rust"
version = "0.1.0"
authors = ["Collin Styles <cstyles@mitre.org>"]
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
tokio = { version = "1", features = ["full"] }
tera = { version = "1", default-features = false }
percent-encoding = "2.1"
clap = "3.1"
tower = { version = "0.4", features = ["make"] }
